myfood-webapi/templates/service.yaml
 apiVersion: v1 
kind: Service 
metadata: 
  name: myfood-webapi  
  namespace: default 
  labels: 
    app: myfood-webapi 
spec: 
  type: ClusterIP 
  ports: 
  - name: http 
    targetPort: 8080 
    port: 8080
  - name: https
    targetPort: 8081
    port: 8081
  selector: 
    app: myfood-webapi
